# baduk-id

./: LICENSE  README.md  gobanid.py  setup.cfg
.github/workflows/: test_python.yml
baduk_id/: baduk_id.py
tests/: test_baduk_id.py
