[metadata]
name = baduk-id
version = 0.1.1
author = Benjamin P. Jones
author_email = benjaminpaikjones@gmail.com
description = A set of utilities for generating a compact ID from a baduk board state.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benjaminpjones/baduk-id
project_urls =
    Bug Tracker = https://github.com/benjaminpjones/baduk-id/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6

[options.packages.find]
where = src
